change picture root

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <h1>Arnon Puengpanwuth</h1>
     <h2>Full-Stack Developer</h2>
     <div>
-        <img src="../pic/meehothead.jpg" alt="bear pic" height="300px" width="200px">
+        <img src="./pic/meehothead.jpg" alt="bear pic" height="300px" width="200px">
     </div>
 
     <p>
