--- a/education.html
+++ b/education.html
@@ -25,7 +25,7 @@
     </nav>
     <hr>
     <h2>Education</h2>
-    <img src="../pic/edu.svg" alt="edu logo" height="250px" width="250px">
+    <img src="./pic/edu.svg" alt="edu logo" height="250px" width="250px">
     <div>
         <table>
             <tr>
