--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
     </nav>
     <hr>
     <h2>Work Experience</h2>
-    <img src="../pic/work.svg" alt="Work logo" height="250px" width="250px">
+    <img src="./pic/work.svg" alt="Work logo" height="250px" width="250px">
     <div>
         <table>
             <tr>
